# optoggles-fs-demo

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/backend/: __init__.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
policy/: .manifest  backend.rego  data.json  frontend.rego  launchdarkly-config.yaml
