[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Omer Zuarets <omer@permit.io>"]
packages = [
    { include = "backend", from = "." }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
